fix jumps/prep

--- a/style.css
+++ b/style.css
@@ -1,9 +1,18 @@
+:root {
+  --dgray:  rgb(  24,  24,  24 );
+  --mgray:  rgb(  61,  61,  61 );
+  ---lgray: rgb(  99,  99,  99 );
+  --llgray: rgb( 121, 121, 121 );
+  --fred:   rgb(  88,  66,  66 );
+  --red:    rgb( 125,  66,  66 );
+}
+
 html {
   width: 100%;
   height: 3100px;
   margin: 0;
   padding: 0;
-  background-color: rgb( 24, 24, 24 );  
+  background-color: var( --dgray );  
   scroll-behavior: smooth;
   -ms-overflow-style: none;
   scrollbar-width: none; }
@@ -15,7 +24,7 @@ body {
   margin: 0;
   position: relative; }
 
-#col_red { color: rgb( 125, 66, 66 ); }
+#col_red { color: var( --red ); }
 
 #background {
   position: absolute;
@@ -45,7 +54,7 @@ body {
   width: 100%;
   height: 105px;
   height: 105px;
-  background-color: rgb( 24, 24, 24 );
+  background-color: var( --dgray );
   box-shadow: 0 0 15px rgba( 0, 0, 0, 0.5 );
   z-index: 1;
   display: block; }
@@ -57,7 +66,7 @@ body {
   position: relative;
   top: 10px;
   right: 0;
-  color: rgb( 61, 61, 61 );
+  color: var( --mgray );
   text-decoration: none;
   transition: color .111s ease-in-out;
   display: inline-block;
@@ -67,11 +76,11 @@ body {
   margin: 0 25px;
   padding: 50px 5px 10px 5px;
   font-size: 1.5em; }
-.options>a:hover { color: rgb( 121, 121, 121 ); }
+.options>a:hover { color: var( --llgray ); }
 .hover_underline_anim {
   display: inline-block;
   position: relative;
-  color: rgb( 61, 61, 61 ); }
+  color: var( --mgray ); }
 .hover_underline_anim::after {
   content: '';
   position: absolute;
@@ -80,7 +89,7 @@ body {
   height: 2px;
   bottom: 10px;
   left: 0;
-  background-color: rgb( 121, 121, 121 );
+  background-color: var( --llgray );
   transform-origin: bottom right;
   transition: transform 0.111s ease-out; }
 .hover_underline_anim:hover::after {
@@ -93,7 +102,7 @@ body {
   left: 0;
   width: 100%;
   height: 250px;
-  background-color: rgb( 24, 24, 24 );
+  background-color: var( --dgray );
   box-shadow: inset 0 0 15px rgba( 0, 0, 0, 0.5 );
   overflow: scroll;
   -ms-overflow-style: none;
@@ -107,7 +116,7 @@ body {
   max-width: 940px;
   height: 240px;
   text-align: center;
-  color:rgb( 99, 99, 99 );
+  color:var( ---lgray );
   font-size: 1.2em;
   padding: 0;
   margin: 0;
@@ -122,7 +131,7 @@ body {
   position: absolute;
   top: 15px;
   left: 85px;
-  color: rgb( 61, 61, 61 );
+  color: var( --mgray );
   font-size: 1.5em;
   top: 15px;
   left: 10px;
@@ -132,9 +141,12 @@ body {
   position: absolute;
   top: 15px;
   left: 85px;
-  color: rgb( 61, 61, 61 );
+  color: var( --mgray );
   font-size: 1.5em; }
 
+#services {
+  position: absolute;
+  top: 800px; }
 .service {
   position: absolute;
   top: 1000px;
@@ -144,7 +156,7 @@ body {
   width: 50%;
   max-width: 1000px;
   border-collapse: collapse;
-  border: 3px solid rgb( 69, 69, 69 ); }
+  border: 3px solid var( --mgray ); }
 .service_header {
   position: absolute;
   top: 920px;
@@ -153,16 +165,16 @@ body {
   min-width: 450px;
   width: 50%;
   max-width: 1000px;
-  color: rgb( 61, 61, 61 );
+  color: var( --mgray );
   text-align: center; }
 .service_icons {
-  color: rgb( 88, 66, 66 );
+  color: var( --fred );
   position: relative;
   top: 42px;
   right: -38%;
   transition: background-color .222s ease-in-out; }
 .service_title {
-  color: rgb( 61, 61, 61 );
+  color: var( --mgray );
   position: relative;
   top: -10px;
   left: 15px;
@@ -171,13 +183,13 @@ body {
   text-align: left;
   transition: background-color .222s ease-in-out; }
 .service_hover {
-  background-color: rgb( 24, 24, 24 );
+  background-color: var( --dgray );
   transition: background-color .222s ease-in-out; }
 .service_hover:hover {
-  background-color: rgb( 61, 61, 61 );
+  background-color: var( --mgray );
   cursor: pointer; }
-.service_hover:hover .service_icons { color: rgb( 125, 66, 66 ); }
-.service_hover:hover .service_title { color: rgb( 24, 24, 24 ); }
+.service_hover:hover .service_icons { color: var( --red  ); }
+.service_hover:hover .service_title { color: var( --dgray ); }
 
 #hidden_paragraph {
   z-index: -1;
@@ -188,7 +200,7 @@ body {
   min-width: 400px;
   width: 50%;
   max-width: 800px;
-  background-color: rgb( 24, 24, 24 );
+  background-color: var( --dgray );
   box-shadow: 0 0 15px rgba( 0, 0, 0, 0.5 );
   transition: ease-in-out .222s; }
 #hidden_paragraph>h2 {
@@ -200,14 +212,14 @@ body {
   width: 70%;
   height: 100%;
   display: none;
-  color: rgb( 61, 61, 61 );
+  color: var( --mgray );
   padding: 10px;
   font-size: 1.5em;
   text-align: left;}
 
 .contact_us {
-  background-color: rgb( 24, 24, 24 );
-  border: 2px solid rgb( 69, 69, 69 );
+  background-color: var( --dgray );
+  border: 2px solid var( --mgray );
   position: fixed;
   bottom: 10px;
   left: 50%;
@@ -218,12 +230,15 @@ body {
   height: 50px;
   text-align: center;
   transition: ease-in-out .175s;
-  color: rgb( 61, 61, 61 );
+  color: var( --mgray );
   font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
   font-size: large; }
 
-.bio_header {
+#about_us {
+  position: absolute;
+  top: 1800px; }
+.about_header {
   position: absolute;
   top: 1920px;
   left: 50%;
@@ -231,9 +246,9 @@ body {
   min-width: 450px;
   width: 50%;
   max-width: 1000px;
-  color: rgb( 61, 61, 61 );
+  color: var( --mgray );
   text-align: center;}
-#bio {
+#about {
   position: absolute;
   top: 2000px;
   left: 50%;
@@ -241,16 +256,16 @@ body {
   min-width: 450px;
   width: 66%;
   max-width: 1500px;
-  border: 1px solid rgb( 125, 66, 66 );
-  background-color: rgb( 24, 24, 24 );
-  color: rgb( 61, 61, 61 );
+  border: 1px solid var( --red );
+  background-color: var( --dgray );
+  color: var( --mgray );
   column-count: 4; }
-.bio_img {
+.about_img {
   display: block;
   width: 90%;
   height: auto;
   padding: 5%; }
-.bio_txt {
+.about_txt {
   display: block;
   width: 100%;
   height: auto;
